fix: mobile horizontal overflow issue

--- a/style.css
+++ b/style.css
@@ -714,7 +714,7 @@ footer p{
 
     }
     .section-title {
-        margin-bottom: 0px;
+        margin-bottom: 10px;
     }
    .about-content h3{
         font-size: medium;
